--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ header {
   align-items: center;
   text-align: center;
   height: 13em;
-  width: 100vw;
+  width: 100%;
 }
 header nav {
   display: flex;
@@ -40,34 +40,29 @@ section {
 }
 
 header#accueil,
-#membre4 > header,
-#membre5 > header {
+#membre4 > header {
   background-color: #111;
   color: white;
   font-family: "Heebo", sans-serif;
   letter-spacing: 0.2rem;
 }
 header#accueil h1,
-#membre4 > header h1,
-#membre5 > header h1 {
+#membre4 > header h1 {
   font-weight: 200;
 }
 header#accueil h2,
-#membre4 > header h2,
-#membre5 > header h2 {
+#membre4 > header h2 {
   font-weight: 200;
   letter-spacing: 0.2rem;
 }
 header#accueil h2 span,
-#membre4 > header h2 span,
-#membre5 > header h2 span {
+#membre4 > header h2 span {
   color: greenyellow;
   font-weight: 300;
   letter-spacing: 0.25rem;
 }
 header#accueil a,
-#membre4 > header a,
-#membre5 > header a {
+#membre4 > header a {
   border: 1px solid rgba(255, 255, 255, 0);
   color: white;
   font-weight: 200;
@@ -76,8 +71,7 @@ header#accueil a,
   text-decoration: none;
 }
 header#accueil a:hover,
-#membre4 > header a:hover,
-#membre5 > header a:hover {
+#membre4 > header a:hover {
   background-color: white;
   color: black;
   font-weight: 300;
@@ -85,8 +79,7 @@ header#accueil a:hover,
   padding-inline: 1em;
 }
 header#accueil .actif,
-#membre4 > header .actif,
-#membre5 > header .actif {
+#membre4 > header .actif {
   background-color: white;
   color: black;
   font-weight: 400;
@@ -94,8 +87,7 @@ header#accueil .actif,
   padding-inline: 1em;
 }
 header#accueil .actif:hover,
-#membre4 > header .actif:hover,
-#membre5 > header .actif:hover {
+#membre4 > header .actif:hover {
   font-weight: 400;
 }
 
@@ -112,7 +104,81 @@ header#accueil .actif:hover,
 }
 
 #membre4 .membre4 {
-  background-color: lightpink;
+  background-color: #111;
+}
+#membre4 .membre4 a {
+  color: rgb(115, 115, 115);
+}
+#membre4 .membre4 .actif {
+  color: black;
+}
+#membre4 .membre4 h2 {
+  font-weight: 300;
+}
+#membre4 .membre4 h2 .attribut {
+  color: rgb(198, 136, 255);
+}
+#membre4 .membre4 h2 .guillemets {
+  color: rgb(255, 167, 135);
+}
+#membre4 .membre4 h2 .variable {
+  color: rgb(183, 255, 74);
+}
+#membre4 .membre4 h2 .valeur {
+  color: rgb(128, 219, 255);
+}
+#membre4 main {
+  background: #111;
+  flex-wrap: wrap;
+  font-family: "Heebo", sans-serif;
+  gap: 5px;
+  margin: 1rem;
+}
+#membre4 main section {
+  height: 42vh;
+  width: 42vw;
+}
+#membre4 main section h3 {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: 0;
+  text-align: right;
+}
+#membre4 main .objectifs {
+  background-color: rgb(128, 219, 255);
+}
+#membre4 main .objectifs:hover {
+  box-shadow: 0 0 1rem rgba(128, 219, 255, 0.75);
+}
+#membre4 main .objectifs:hover h3 {
+  color: rgba(0, 0, 0, 0.75);
+}
+#membre4 main .a_propos {
+  background-color: rgb(198, 136, 255);
+}
+#membre4 main .a_propos:hover {
+  box-shadow: 0 0 0.6rem rgba(198, 136, 255, 0.75);
+}
+#membre4 main .a_propos:hover h3 {
+  color: rgba(0, 0, 0, 0.75);
+}
+#membre4 main .experience_travail {
+  background-color: rgb(183, 255, 74);
+}
+#membre4 main .experience_travail:hover {
+  box-shadow: 0 0 0.6rem rgba(183, 255, 74, 0.75);
+}
+#membre4 main .experience_travail:hover h3 {
+  color: rgba(0, 0, 0, 0.75);
+}
+#membre4 main .experience_additionnelles {
+  background-color: rgb(255, 167, 135);
+}
+#membre4 main .experience_additionnelles:hover {
+  box-shadow: 0 0 0.8rem rgba(255, 167, 135, 0.75);
+}
+#membre4 main .experience_additionnelles:hover h3 {
+  color: rgba(0, 0, 0, 0.75);
 }
 
 #membre5 .membre5 {
