--- a/css/style.scss
+++ b/css/style.scss
@@ -169,23 +169,34 @@ header#accueil,
       }
     }
   }
-
+  
+  //MAIN
   main {
     background: #111;
     flex-wrap: wrap;
     font-family: 'Heebo', sans-serif;
-    gap: 5px;
     margin: 1rem;
 
       section {
-        height: 42vh;
         width: 42vw;
 
+        div {
+          padding: 2rem;
+        }
+        
         h3 {
           font-weight: 500;
           color: rgba(0, 0, 0, 0.5);
-          margin-top: 0;
+          margin: 1rem 1rem 0 0;
           text-align: right;
+        }
+
+        h4 {
+          margin-bottom: 0;
+        }
+
+        p {
+          margin-top: 0.25rem,
         }
       }
   
