early styling benoit (membre3)

--- a/css/style.scss
+++ b/css/style.scss
@@ -49,7 +49,8 @@ section {
 
 // ACCUEIL -----------------------------------
 header#accueil, 
-#membre4>header {
+#membre4>header,
+#membre3>header {
   background-color: #111;
   color: white;
   font-family: 'Heebo', sans-serif;
@@ -128,7 +129,8 @@ header#accueil,
 
   // HEADER
   .membre3 {
-    background-color: lightblue;    
+    background-color: lightblue;
+    color: #222;    
   }
 
 }
