Update de la page d'accueil pour incorporer du JS et des images. Petit ajout dans le CSS pour l'accueil - Jacqueline

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ header#accueil .actif:hover,
   font-weight: 400;
 }
 
+.image {
+  margin-top: 2rem;
+}
+
 #membre1 .membre1 {
   background-color: lightcoral;
 }
