redaction texte + ajustement css depart

--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,8 @@ header#accueil .actif:hover,
 }
 
 #membre3 .membre3 {
-  background-color: lightblue;
-  color: #222;
+  background-color: #111;
+  color: #fff;
 }
 
 #membre4 .membre4 {
