--- a/css/style.scss
+++ b/css/style.scss
@@ -129,8 +129,8 @@ header#accueil,
 
   // HEADER
   .membre3 {
-    background-color: lightblue;
-    color: #222;    
+    background-color: #111;
+    color: #fff;    
   }
 
 }
