--- a/css/style.scss
+++ b/css/style.scss
@@ -104,9 +104,33 @@ header#accueil,
 // PIER-ALEXANDRE --------------------------
 #membre1 {
 
+  background-color: #353535;
+  color: #d9d9d9;
+
   // HEADER
   .membre1 {
-    background-color: lightcoral;
+    background-color: #3c6e71;
+
+    a {
+      text-decoration: none;
+      color: #d9d9d9;
+    }
+  }
+
+  main {
+
+    section {
+
+      h3 {
+
+        margin-bottom: 0px;
+      }
+
+      .ligne {
+
+        margin-top: 0px;
+      }
+    }
   }
 
 }
