--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ section {
 
 header#accueil,
 #membre4 > header,
-#membre3 > header {
+#membre3 > header,
+#membre1 > header {
   background-color: #111;
   color: white;
   font-family: "Heebo", sans-serif;
@@ -51,25 +52,29 @@ header#accueil,
 }
 header#accueil h1,
 #membre4 > header h1,
-#membre3 > header h1 {
+#membre3 > header h1,
+#membre1 > header h1 {
   font-weight: 200;
 }
 header#accueil h2,
 #membre4 > header h2,
-#membre3 > header h2 {
+#membre3 > header h2,
+#membre1 > header h2 {
   font-weight: 200;
   letter-spacing: 0.2rem;
 }
 header#accueil h2 span,
 #membre4 > header h2 span,
-#membre3 > header h2 span {
+#membre3 > header h2 span,
+#membre1 > header h2 span {
   color: greenyellow;
   font-weight: 300;
   letter-spacing: 0.25rem;
 }
 header#accueil a,
 #membre4 > header a,
-#membre3 > header a {
+#membre3 > header a,
+#membre1 > header a {
   border: 1px solid rgba(255, 255, 255, 0);
   color: white;
   font-weight: 200;
@@ -79,7 +84,8 @@ header#accueil a,
 }
 header#accueil a:hover,
 #membre4 > header a:hover,
-#membre3 > header a:hover {
+#membre3 > header a:hover,
+#membre1 > header a:hover {
   background-color: white;
   color: black;
   font-weight: 300;
@@ -88,7 +94,8 @@ header#accueil a:hover,
 }
 header#accueil .actif,
 #membre4 > header .actif,
-#membre3 > header .actif {
+#membre3 > header .actif,
+#membre1 > header .actif {
   background-color: white;
   color: black;
   font-weight: 400;
@@ -97,7 +104,8 @@ header#accueil .actif,
 }
 header#accueil .actif:hover,
 #membre4 > header .actif:hover,
-#membre3 > header .actif:hover {
+#membre3 > header .actif:hover,
+#membre1 > header .actif:hover {
   font-weight: 400;
 }
 
@@ -114,6 +122,10 @@ header#accueil .actif:hover,
 }
 #membre1 .membre1 a {
   text-decoration: none;
+  color: #d9d9d9;
+}
+#membre1 .membre1 a:hover {
+  background-color: #353535;
   color: #d9d9d9;
 }
 #membre1 main section h3 {
